app/Kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-app
  template:
    metadata:
      labels:
        app: sre-app
    spec:
      containers:
        - name: sre-app
          image: ghostly404/warpnet-sre-app:latest
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: sre-app-service
spec:
  selector:
    app: sre-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
